--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
+    "react-wavify": "^1.8.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.20"
   },
