--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
+    "react-id-swiper": "^4.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
     "react-wavify": "^1.8.3",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.20"
+    "sweetalert2": "^11.7.20",
+    "swiper": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
