--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "axios": "^1.4.0",
     "firebase": "^10.1.0",
     "localforage": "^1.10.0",
@@ -22,6 +23,7 @@
     "react-id-swiper": "^4.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
     "react-wavify": "^1.8.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.20",
