--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
+    "react-intersection-observer": "^9.5.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
